fix: doppred csv index

--- a/calorie_NN.ipynb
+++ b/calorie_NN.ipynb
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "id": "4b3e5aa8",
    "metadata": {},
    "outputs": [],
@@ -1226,12 +1226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 95,
    "id": "687e08ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission_df.to_csv('/home/albatrosfirst/calorieexp_NN/submission.csv')"
+    "submission_df.to_csv('/home/albatrosfirst/calorieexp_NN/submission.csv', index=False)"
    ]
   }
  ],
